docs/0.19/_sources/api/gammapy.maps.HpxNDMap.rst.txt
HpxNDMap
========

.. currentmodule:: gammapy.maps

.. autoclass:: HpxNDMap
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~HpxNDMap.data
      ~HpxNDMap.geom
      ~HpxNDMap.is_mask
      ~HpxNDMap.meta
      ~HpxNDMap.quantity
      ~HpxNDMap.tag
      ~HpxNDMap.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~HpxNDMap.apply_edisp
      ~HpxNDMap.coadd
      ~HpxNDMap.convolve
      ~HpxNDMap.convolve_full
      ~HpxNDMap.convolve_wcs
      ~HpxNDMap.copy
      ~HpxNDMap.create
      ~HpxNDMap.crop
      ~HpxNDMap.cumsum
      ~HpxNDMap.cutout
      ~HpxNDMap.downsample
      ~HpxNDMap.fill_by_coord
      ~HpxNDMap.fill_by_idx
      ~HpxNDMap.fill_by_pix
      ~HpxNDMap.fill_events
      ~HpxNDMap.from_geom
      ~HpxNDMap.from_hdu
      ~HpxNDMap.from_hdulist
      ~HpxNDMap.from_stack
      ~HpxNDMap.from_wcs_tiles
      ~HpxNDMap.get_by_coord
      ~HpxNDMap.get_by_idx
      ~HpxNDMap.get_by_pix
      ~HpxNDMap.get_image_by_coord
      ~HpxNDMap.get_image_by_idx
      ~HpxNDMap.get_image_by_pix
      ~HpxNDMap.get_spectrum
      ~HpxNDMap.integral
      ~HpxNDMap.interp_by_coord
      ~HpxNDMap.interp_by_pix
      ~HpxNDMap.interp_to_geom
      ~HpxNDMap.iter_by_image
      ~HpxNDMap.mask_nearest_position
      ~HpxNDMap.normalize
      ~HpxNDMap.pad
      ~HpxNDMap.plot
      ~HpxNDMap.plot_grid
      ~HpxNDMap.plot_interactive
      ~HpxNDMap.plot_mask
      ~HpxNDMap.read
      ~HpxNDMap.reduce
      ~HpxNDMap.reduce_over_axes
      ~HpxNDMap.resample_axis
      ~HpxNDMap.set_by_coord
      ~HpxNDMap.set_by_idx
      ~HpxNDMap.set_by_pix
      ~HpxNDMap.slice_by_idx
      ~HpxNDMap.smooth
      ~HpxNDMap.stack
      ~HpxNDMap.sum_over_axes
      ~HpxNDMap.to_cube
      ~HpxNDMap.to_hdu
      ~HpxNDMap.to_hdulist
      ~HpxNDMap.to_nside
      ~HpxNDMap.to_region_nd_map
      ~HpxNDMap.to_swapped
      ~HpxNDMap.to_unit
      ~HpxNDMap.to_wcs
      ~HpxNDMap.to_wcs_tiles
      ~HpxNDMap.upsample
      ~HpxNDMap.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data
   .. autoattribute:: geom
   .. autoattribute:: is_mask
   .. autoattribute:: meta
   .. autoattribute:: quantity
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: apply_edisp
   .. automethod:: coadd
   .. automethod:: convolve
   .. automethod:: convolve_full
   .. automethod:: convolve_wcs
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: crop
   .. automethod:: cumsum
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: fill_by_coord
   .. automethod:: fill_by_idx
   .. automethod:: fill_by_pix
   .. automethod:: fill_events
   .. automethod:: from_geom
   .. automethod:: from_hdu
   .. automethod:: from_hdulist
   .. automethod:: from_stack
   .. automethod:: from_wcs_tiles
   .. automethod:: get_by_coord
   .. automethod:: get_by_idx
   .. automethod:: get_by_pix
   .. automethod:: get_image_by_coord
   .. automethod:: get_image_by_idx
   .. automethod:: get_image_by_pix
   .. automethod:: get_spectrum
   .. automethod:: integral
   .. automethod:: interp_by_coord
   .. automethod:: interp_by_pix
   .. automethod:: interp_to_geom
   .. automethod:: iter_by_image
   .. automethod:: mask_nearest_position
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: plot
   .. automethod:: plot_grid
   .. automethod:: plot_interactive
   .. automethod:: plot_mask
   .. automethod:: read
   .. automethod:: reduce
   .. automethod:: reduce_over_axes
   .. automethod:: resample_axis
   .. automethod:: set_by_coord
   .. automethod:: set_by_idx
   .. automethod:: set_by_pix
   .. automethod:: slice_by_idx
   .. automethod:: smooth
   .. automethod:: stack
   .. automethod:: sum_over_axes
   .. automethod:: to_cube
   .. automethod:: to_hdu
   .. automethod:: to_hdulist
   .. automethod:: to_nside
   .. automethod:: to_region_nd_map
   .. automethod:: to_swapped
   .. automethod:: to_unit
   .. automethod:: to_wcs
   .. automethod:: to_wcs_tiles
   .. automethod:: upsample
   .. automethod:: write
